update, showing, delete users

--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -3,4 +3,16 @@ andrew:
   name: Andrew Chen
   email: andrew@example.com
   password_digest: <%= User.digest('password') %>
+  admin: true
 
+michael:
+  name: Michael Hartl
+  email: michael@example.com
+  password_digest: <%= User.digest('password') %>
+  
+<% 30.times do |n| %>
+user_<%= n %>:
+  name: <%= "User #{n}" %>
+  email: <%= "user-#{n}@example.com" %>
+  password_digest: <%= User.digest('password') %>
+<% end %>
