--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -4,15 +4,21 @@ andrew:
   email: andrew@example.com
   password_digest: <%= User.digest('password') %>
   admin: true
+  activated: true
+  activated_at: Time.zone.now
 
 michael:
   name: Michael Hartl
   email: michael@example.com
   password_digest: <%= User.digest('password') %>
+  activated: true
+  activated_at: Time.zone.now
   
 <% 30.times do |n| %>
 user_<%= n %>:
   name: <%= "User #{n}" %>
   email: <%= "user-#{n}@example.com" %>
   password_digest: <%= User.digest('password') %>
+  activated: true
+  activated_at: Time.zone.now
 <% end %>
